--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
   </head>
   <body class="font-mono">
     <div id="root" class=""></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <script type="module" src="/app/main.tsx"></script>
   </body>
 </html>
