Remove webgpu mention

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Chip8 Emulator with wasm and webgpu</title>
-    <meta name="description" content="A Chip8 emulator built with WebAssembly and WebGPU." />
-    <meta property="og:title" content="Chip8 Emulator with wasm and webgpu" />
-    <meta property="og:description" content="A Chip8 emulator built with WebAssembly and WebGPU." />
+    <title>Chip8 Emulator in wasm</title>
+    <meta name="description" content="A Chip8 emulator built in WebAssembly." />
+    <meta property="og:title" content="Chip8 Emulator in wasm" />
+    <meta property="og:description" content="A Chip8 emulator built in WebAssembly." />
     <!-- <meta property="og:type" content="website" /> -->
     <!-- <meta property="og:url" content="https://chip8.cool.omg.lol" />
     <meta property="og:image" content="https://chip8.cool.omg.lol/screenshot.png" />
