--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     <meta name="description" content="A Chip8 emulator built in WebAssembly." />
     <meta property="og:title" content="Chip8 Emulator in wasm" />
     <meta property="og:description" content="A Chip8 emulator built in WebAssembly." />
-    <!-- <meta property="og:type" content="website" /> -->
-    <!-- <meta property="og:url" content="https://chip8.cool.omg.lol" />
+    <script src="https://cdn.counter.dev/script.js" data-id="89d8ca26-843e-432f-b40f-b89daec1cb8e" data-utcoffset="7"></script>
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://chip8.cool.omg.lol" />
     <meta property="og:image" content="https://chip8.cool.omg.lol/screenshot.png" />
-    <meta name="twitter:image" content="https://chip8.cool.omg.lol/screenshot.png" /> -->
+    <meta name="twitter:image" content="https://chip8.cool.omg.lol/screenshot.png" />
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
   </head>
   <body class="font-mono">
